<resources>
    <string name="app_name">QNo2 18ARID2982</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bill System</string>
    <string name="nav_header_subtitle">nouman.habib@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Login</string>
    <string name="menu_slideshow">Registration</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="add_bill_detail">Add Bill detail</string>
</resources>